# phosphor-pid-control

./: .clang-format  .clang-tidy  .gitignore  0001-Support-multi-host-IgnoreFailIfHostOff.patch  0001-Support-new-methods-to-calculate-PWM-output.patch  0001-dbuspassive-Fail-reason-for-missing-D-Bus-object.patch  0001-pid-Preserve-manual-mode-across-zone-rebuilds.patch  MAINTAINERS  Makefile.am  OWNERS  PID_Control_Documentation.md  README  README.md  bootstrap.sh  conf.hpp  configure.ac  configure.md  control.cpp  control.hpp  fan-versioning.md  fan_rpm_loop_test.sh  groups  hoststatemonitor.hpp  interfaces.hpp  ipmi.md  main.cpp  meson.build  meson.options  meson_options.txt  override.md  phosphor-pid-control.service.in  project.config  setsensor.cpp  tuning.md  util.cpp  util.hpp
buildjson/: buildjson.cpp
dbus/: dbusactiveread.cpp  dbusactiveread.hpp  dbusconfiguration.cpp  dbusconfiguration.hpp  dbushelper.cpp  dbushelper.hpp  dbushelper_interface.hpp  dbuspassive.cpp  dbuspassive.hpp  dbuspassiveredundancy.cpp  dbuspassiveredundancy.hpp  dbusutil.cpp  dbusutil.hpp  dbuswrite.cpp  dbuswrite.hpp  util.cpp  util.hpp
errors/: exception.hpp
examples/: README  fan-info.json  swampd.conf
experiments/: drive.cpp  drive.hpp
failsafeloggers/: builder.cpp  builder.hpp  failsafe_logger.cpp  failsafe_logger.hpp  failsafe_logger_utility.cpp  failsafe_logger_utility.hpp
ipmi/: control.hpp  dbus_mode.cpp  dbus_mode.hpp  main_ipmi.cpp  manual_messages.hpp  manualcmds.cpp  manualcmds.hpp
notimpl/: readonly.cpp  readonly.hpp  writeonly.cpp  writeonly.hpp
pid/: README  builder.cpp  builder.hpp  builderconfig.cpp  builderconfig.hpp  buildjson.cpp  buildjson.hpp  controller.cpp  controller.hpp  fan.hpp  fancontroller.cpp  fancontroller.hpp  manual_mode_manager.hpp  manualmodemanager.hpp  pidcontroller.cpp  pidcontroller.hpp  pidloop.cpp  pidloop.hpp  pidthread.cpp  pidthread.hpp  simplefancontroller.cpp  simplefancontroller.hpp  stepwisecontroller.cpp  stepwisecontroller.hpp  thermalcontroller.cpp  thermalcontroller.hpp  tuning.cpp  tuning.hpp  util.cpp  util.hpp  zone.cpp  zone.hpp  zone_interface.hpp
pid/ec/: logging.cpp  logging.hpp  pid.cpp  pid.hpp  pid_common.hpp  pid_standard.cpp  pid_standard.hpp  stepwise.cpp  stepwise.hpp
scripts/: README  pid-example.txt  pid-example.yaml  pid_gen.py  sensor-example.txt  sensor-example.yaml  sensor_gen.py  writepid.mako.cpp  writesensor.mako.cpp  writezone.mako.cpp  zone-example.txt  zone-example.yaml  zone_gen.py
sensors/: build_utils.cpp  build_utils.hpp  builder.cpp  builder.hpp  builderconfig.cpp  builderconfig.hpp  buildjson.cpp  buildjson.hpp  host.cpp  host.hpp  manager.cpp  manager.hpp  pluggable.cpp  pluggable.hpp  sensor.hpp
subprojects/: phosphor-host-ipmid.wrap
sysfs/: sysfsread.cpp  sysfsread.hpp  sysfswrite.cpp  sysfswrite.hpp  util.cpp  util.hpp
test/: Makefile.am  controller_mock.hpp  dbus_active_unittest.cpp  dbus_configuration_unittest.cpp  dbus_passive_unittest.cpp  dbus_util_unittest.cpp  dbushelper_mock.hpp  helpers.hpp  json_parse_unittest.cpp  meson.build  pid_fancontroller_unittest.cpp  pid_json_unittest.cpp  pid_stepwisecontroller_unittest.cpp  pid_thermalcontroller_unittest.cpp  pid_zone_unittest.cpp  pluggable_unittest.cpp  readinterface_mock.hpp  sensor_host_unittest.cpp  sensor_manager_unittest.cpp  sensor_mock.hpp  sensor_pluggable_unittest.cpp  sensors_json_unittest.cpp  util_unittest.cpp  writeinterface_mock.hpp  zone_mock.hpp
test/integration/: Makefile.am  README.md  conf.json  conf2.json  fan_control_itest.cpp  swampd_test.cpp  swampd_test.hpp
test/integration/common/: integration_test.cpp  integration_test.hpp  mapperd_manager.cpp  mapperd_manager.hpp
test/integration/common/services/: fan_server.cpp  fan_server.hpp  sensor_server.cpp  sensor_server.hpp
test/subprojects/: boost-dbus.wrap
threads/: busthread.cpp  busthread.hpp
tools/: fan_rpm_loop_test.sh  fan_rpm_loop_unittest.sh
